--- a/heritagesites/static/css/heritagesites.css
+++ b/heritagesites/static/css/heritagesites.css
@@ -75,7 +75,7 @@ main {
 
 .container-fluid {
     background-color: transparent;
-    padding: 0.5rem 0.5rem;
+    /* padding: 0.5rem 0.5rem; */
 }
 
 /*
