--- a/heritagesites/templates/heritagesites/base.html
+++ b/heritagesites/templates/heritagesites/base.html
@@ -20,28 +20,27 @@
   <body>
 
     <!-- A grey horizontal navbar that becomes vertical on small screens -->
-    <nav class="navbar navbar-expand-sm navbar-dark navbar-custom p-0">
-
-      <a class="navbar-brand" href="{% url 'home' %}">SI664 Heritage Sites</a>
-
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'about' %}">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'sites' %}">Sites</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'country_area' %}">Countries</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'login' %}">login</a>
-        </li>
-      </ul>
-
+    <nav class="navbar navbar-expand-sm navbar-dark navbar-custom sticky-top px-4 py-2">
+      <div class="row">
+        <a class="navbar-brand" href="{% url 'home' %}">SI664 Heritage Sites</a>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'about' %}">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'sites' %}">Sites</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'country_area' %}">countries/areas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">login</a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
-    <main>
+    <main class="px-4 py-3">
       <div class="container-fluid">
         {% block content %}
 
@@ -49,7 +48,7 @@
       </div>
     </main>
 
-    <footer>
+    <footer class="px-4 py-2">
       <p>Copyright &copy; 2018 <a href="mailto:hopokuan@umich.edu">Pokuan Ho</a></p>
     </footer>
 
