--- a/heritagesites/templates/heritagesites/site_new.html
+++ b/heritagesites/templates/heritagesites/site_new.html
@@ -24,9 +24,33 @@
       </div>
     </div>
 
-
     <!-- Restore missing fields rendered using Bootstrap rows and columns classes -->
+    <div class="row">
+      <div class="col-6">
+        {{ form.site_name|as_crispy_field }}
+      </div>
+    </div>
 
+    <div class="row">
+      <div class="col-6">
+        {{ form.description|as_crispy_field }}
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-6">
+        {{ form.justification|as_crispy_field }}
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-3">
+        {{ form.date_inscribed|as_crispy_field }}
+      </div>
+      <div class="col-3">
+        {{ form.area_hectares|as_crispy_field }}
+      </div>
+    </div>
 
     <div class="row">
       <div class="col-3">
@@ -39,18 +63,12 @@
 
     <div class="row">
       <div class="col-6">
-        {{ form.area_hectares|as_crispy_field }}
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-6">
         {{ form.transboundary|as_crispy_field }}
       </div>
     </div>
 
     <button type="submit" class="btn btn-outline-success">Add</button>
-    &nbsp;<a class="btn btn-outline-secondary" href="{% url 'site' %}">cancel</a>
+    &nbsp;<a class="btn btn-outline-secondary" href="{% url 'sites' %}">cancel</a>
   </form>
 
 {% endblock content %}
