--- a/heritagesites/templates/registration/login.html
+++ b/heritagesites/templates/registration/login.html
@@ -15,7 +15,7 @@
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <button type="submit" class="btn btn-outline-success">Login</button>
   </form>
 
 {% endblock content %}
