--- a/heritagesites/templates/heritagesites/base.html
+++ b/heritagesites/templates/heritagesites/base.html
@@ -28,11 +28,16 @@
               <a class="nav-link" href="{% url 'about' %}">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'site_filter' %}">sites</a>
+          </li>
+          <!--
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'sites' %}">Sites</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'country_area' %}">countries/areas</a>
           </li>
+          -->
           <li class="nav-item">
             <a class="nav-link" href="{% url 'login' %}">login</a>
           </li>
