--- a/heritagesites/templates/heritagesites/site_detail.html
+++ b/heritagesites/templates/heritagesites/site_detail.html
@@ -22,69 +22,49 @@
        </div>
      </header>
 
-     {% if site.country_area.all %}
-       <div class="row">
-         <div class="col-sm-2">
-           <p>Region</p>
-         </div>
-         <div class="col-sm-10">
-           {% spaceless %}
-           <p>
-             {% for country_area in site.country_area.all %}
-               {% if country_area.location.intermediate_region %}
-                 {% ifchanged country_area.location.intermediate_region.intermediate_region_id %}
-                   {% if forloop.first %}
-                     {{ country_area.location.intermediate_region.intermediate_region_name.strip }}
-                   {% else %}
-                     {{ country_area.location.intermediate_region.intermediate_region_name.strip|add_leading_comma }}
-                   {% endif %}
-                 {% endifchanged %}
-               {% elif country_area.location.sub_region %}
-                 {% ifchanged country_area.location.sub_region.sub_region_id %}
-                   {% if forloop.first %}
-                     {{ country_area.location.sub_region.sub_region_name.strip }}
-                   {% else %}
-                     {{ country_area.location.sub_region.sub_region_name.strip|add_leading_comma }}
-                   {% endif %}
-                 {% endifchanged %}
-               {% elif country_area.location.region %}
-                 {% ifchanged country_area.location.region.region_id %}
-                   {% if forloop.first %}
-                     {{ country_area.location.region.region_name.strip }}
-                   {% else %}
-                     {{ country_area.location.region.region_name.strip|add_leading_comma }}
-                   {% endif %}
-                 {% endifchanged %}
-               {% else %}
-                 {% ifchanged country_area.location.planet_id %}
-                   {{ country_area.location.planet.unsd_name.strip }}
-                 {% endifchanged %}
-               {% endif %}
-             {% endfor %}
-           </p>
-           {% endspaceless %}
-         </div>
-       </div>
+     <!-- Adding region, subregion, intermediate_region, country_area rows -->
+     {% if site.region_names %}
+      <div class="row">
+        <div class="col-sm-2">
+          <p>Region</p>
+        </div>
+        <div class="col-sm-10">
+          <p>{{ site.region_names | safe }}</p>
+        </div>
+      </div>
+     {% endif %}
 
-       <div class="row">
-         <div class="col-sm-2">
-           <p>Country / Area</p>
-         </div>
-         <div class="col-sm-10">
-           {% spaceless %}
-           <p>
-             {% for country_area in site.country_area.all %}
-               {% if forloop.last %}
-                 {{ country_area.country_area_name.strip }} ({{ country_area.iso_alpha3_code.strip }})
-               {% else %}
-                 {{ country_area.country_area_name.strip }} {{ country_area.iso_alpha3_code.strip|add_parens|add_trailing_comma }}
-               {% endif %}
-             {% endfor %}
-           </p>
-           {% endspaceless %}
-         </div>
-       </div>
+     {% if site.sub_region_names %}
+      <div class="row">
+        <div class="col-sm-2">
+          <p>Sub-region</p>
+        </div>
+        <div class="col-sm-10">
+          <p>{{ site.sub_region_names | safe }}</p>
+        </div>
+      </div>
+     {% endif %}
 
+     {% if site.intermediate_region_names %}
+      <div class="row">
+        <div class="col-sm-2">
+          <p>Intermediate-region</p>
+        </div>
+        <div class="col-sm-10">
+          <p>{{ site.intermediate_region_names | safe }}</p>
+        </div>
+      </div>
+     {% endif %}
+
+     {% if site.country_area_names %}
+      <div class="row">
+        <div class="col-sm-2">
+          <p>Country/Area</p>
+        </div>
+        <div class="col-sm-10">
+          <p>{{ site.country_area_names | safe }}</p>
+        </div>
+      </div>
      {% endif %}
 
      {% if site.heritage_site_category.category_name %}
